10:44 계산식 오류 수정